--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "publish": "npm publish ./goo-js & npm publish ./goo-dom & npm publish ./goo-state & npm publish ./goo-utils & npm publish ./goo-shorthand & del npm-debug.log",
     "start:example": "cd example & start index.html & webpack --watch",
-    "test": "mocha \"*/*.test.js\""
+    "test": "mocha \"*/*.test.js\"",
+    "autotest": "nodemon -x \"npm run test -s\""
   },
   "dependencies": {
     "goo-js": "^1.1.0"
@@ -20,6 +21,7 @@
     "eslint": "^3.15.0",
     "eslint-config-google": "^0.7.1",
     "mocha": "^3.2.0",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "nodemon": "^1.11.0"
   }
 }
