--- a/goo-state/package.json
+++ b/goo-state/package.json
@@ -2,7 +2,7 @@
   "name": "goo-state",
   "version": "1.0.0",
   "description": "",
-  "main": "goo-state.js",
+  "main": "goo.state.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
