--- a/goo-shorthand/package.json
+++ b/goo-shorthand/package.json
@@ -2,7 +2,7 @@
   "name": "goo-shorthand",
   "version": "1.0.0",
   "description": "",
-  "main": "goo-shorthand.js",
+  "main": "goo.shorthand.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
