--- a/goo-utils/package.json
+++ b/goo-utils/package.json
@@ -2,7 +2,7 @@
   "name": "goo-utils",
   "version": "1.0.0",
   "description": "",
-  "main": "goo-utils.js",
+  "main": "goo.utils.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
