--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
-  "name": "ECMS",
+  "name": "goo-js",
   "version": "1.0.0",
-  "main": "ecms.js",
-  "repository": "https://github.com/g-harel/ECMS.git",
   "license": "MIT",
   "scripts": {
     "publish": "npm publish ./goo-js & npm publish ./goo-dom & npm publish ./goo-state & npm publish ./goo-utils & npm publish ./goo-shorthand & del npm-debug.log",
@@ -20,8 +18,9 @@
     "chai": "^3.5.0",
     "eslint": "^3.15.0",
     "eslint-config-google": "^0.7.1",
+    "jsdom": "^9.12.0",
     "mocha": "^3.2.0",
-    "webpack": "^2.2.1",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "webpack": "^2.2.1"
   }
 }
