added bundling script

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "publish": "npm publish ./goo-js & npm publish ./goo-dom & npm publish ./goo-state & npm publish ./goo-utils & npm publish ./goo-shorthand & del npm-debug.log",
     "start:example": "cd example & start index.html & webpack --watch",
     "test": "mocha \"*/*.test.js\"",
-    "autotest": "nodemon -x \"npm run test -s\""
+    "autotest": "nodemon -x \"npm run test -s\"",
+    "bundle": "webpack --watch -p"
   },
   "dependencies": {
     "goo-js": "^1.1.0"
