--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start:example": "cd example & start index.html & webpack --watch",
     "test": "mocha \"*/*.test.js\"",
     "autotest": "nodemon -x \"npm run test -s\"",
-    "bundle": "webpack --watch -p"
+    "bundle": "webpack --watch"
   },
   "dependencies": {
     "goo-js": "^1.1.0"
