added named blobs

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "publish": "npm publish ./goo-js & npm publish ./goo-dom & npm publish ./goo-state & npm publish ./goo-utils & npm publish ./goo-router & npm publish ./goo-history & del npm-debug.log",
     "test": "mocha \"*/*.test.js\"",
     "autotest": "nodemon -x \"npm run test -s\"",
-    "bundle": "webpack --watch -p"
+    "bundle": "webpack --watch"
   },
   "dependencies": {
     "goo-js": "^1.1.0"
