--- a/goo-js/package.json
+++ b/goo-js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "goo-js",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "",
   "main": "goo.js",
   "scripts": {
@@ -9,6 +9,13 @@
   "repository": {
     "type": "git",
     "url": "http://www.github.com/g-harel/goo"
+  },
+  "dependencies": {
+    "goo-utils": "^2.0.1",
+    "goo-dom": "^2.0.1",
+    "goo-state": "^2.0.1",
+    "goo-router": "^2.0.1",
+    "goo-history": "^2.0.1"
   },
   "author": "g-harel",
   "license": "MIT"
