--- a/goo-state/package.json
+++ b/goo-state/package.json
@@ -1,10 +1,13 @@
 {
   "name": "goo-state",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "",
   "main": "goo.state.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "goo-utils": "^2.0.1"
   },
   "author": "",
   "license": "MIT"
