--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "goo-js",
+  "name": "goo",
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "publish": "npm publish ./goo-js & npm publish ./goo-dom & npm publish ./goo-state & npm publish ./goo-utils & npm publish ./goo-router & npm publish ./goo-history & del npm-debug.log",
     "test": "mocha \"*/*.test.js\"",
     "autotest": "nodemon -x \"npm run test -s\"",
-    "bundle": "webpack --watch"
+    "bundle": "webpack",
+    "bundle:watch": "webpack --watch",
+    "bunlde:minify": "webpack -p"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
     "chai": "^3.5.0",
+    "compression-webpack-plugin": "^0.4.0",
     "eslint": "^3.15.0",
     "eslint-config-google": "^0.7.1",
     "jsdom": "^9.12.0",
     "mocha": "^3.2.0",
     "nodemon": "^1.11.0",
     "webpack": "^2.2.1"
-  },
-  "dependencies": {
-    "goo-js": "^2.0.1"
   }
 }
