--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "mocha": "^3.2.0",
     "nodemon": "^1.11.0",
     "webpack": "^2.2.1"
+  },
+  "dependencies": {
+    "goo-js": "^2.3.0"
   }
 }
