added linting to test script

--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "publish:goo-history": "npm publish ./goo-history",
     "publish": "run-s publish:* dispose",
     "dispose": "del npm-debug.log",
-    "test": "mocha \"*/*test.js\"",
-    "test:watch": "nodemon -x \"npm run test -s\"",
+    "test": "run-s test:eslint test:mocha",
+    "test:mocha": "mocha \"*/*test.js\"",
+    "test:eslint": "eslint *.js",
+    "test:watch": "nodemon -x \"npm run test:mocha -s\"",
     "coverage": "istanbul cover node_modules/mocha/bin/_mocha */*test.js -x */*test.js",
     "coverage:open": "run-s coverage showcov",
     "coverage:coveralls": "run-s coverage coveralls",
