--- a/goo-router/package.json
+++ b/goo-router/package.json
@@ -1,13 +1,13 @@
 {
   "name": "goo-router",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "",
   "main": "goo.router.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "goo-utils": "^2.0.1",
+    "goo-utils": "*",
     "path-to-regexp": "^1.7.0"
   },
   "author": "",
