--- a/goo-state/package.json
+++ b/goo-state/package.json
@@ -1,13 +1,13 @@
 {
   "name": "goo-state",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "",
   "main": "goo.state.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "goo-utils": "^2.0.1"
+    "goo-utils": "*"
   },
   "author": "",
   "license": "MIT"
