--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "publish:goo-utils": "npm publish ./goo-utils",
     "publish:goo-router": "npm publish ./goo-router",
     "publish:goo-history": "npm publish ./goo-history",
-    "publish": "run-s publish:* dispose",
-    "dispose": "del npm-debug.log",
+    "publish:clean": "del npm-debug.log",
+    "publish": "run-s publish:*",
     "test": "run-s test:eslint test:mocha",
     "test:mocha": "mocha \"*/*test.js\"",
     "test:eslint": "eslint *.js",
@@ -24,7 +24,6 @@
     "bundle:watch": "webpack --watch",
     "bunlde:minify": "webpack -p"
   },
-  "homepage": "http://github.com/g-harel/goo",
   "repository": {
     "type": "git",
     "url": "http://github.com/g-harel/goo"
@@ -36,6 +35,7 @@
     "chai": "^3.5.0",
     "compression-webpack-plugin": "^0.4.0",
     "coveralls": "^2.13.1",
+    "emn": "^0.1.2",
     "eslint": "^3.15.0",
     "eslint-config-google": "^0.7.1",
     "istanbul": "^0.4.5",
@@ -45,7 +45,5 @@
     "npm-run-all": "^4.0.2",
     "webpack": "^2.2.1"
   },
-  "dependencies": {
-    "goo-js": "*"
-  }
+  "dependencies": {}
 }
