--- a/package.json
+++ b/package.json
@@ -3,26 +3,26 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "publish:goo-js": "npm publish ./goo-js",
-    "publish:goo-dom": "npm publish ./goo-dom",
-    "publish:goo-state": "npm publish ./goo-state",
-    "publish:goo-utils": "npm publish ./goo-utils",
-    "publish:goo-router": "npm publish ./goo-router",
-    "publish:goo-history": "npm publish ./goo-history",
+    "publish:goo-js": "npm publish ./packages/goo-js",
+    "publish:goo-dom": "npm publish ./packages/goo-dom",
+    "publish:goo-state": "npm publish ./packages/goo-state",
+    "publish:goo-utils": "npm publish ./packages/goo-utils",
+    "publish:goo-router": "npm publish ./packages/goo-router",
+    "publish:goo-history": "npm publish ./packages/goo-history",
     "publish:clean": "del npm-debug.log",
     "publish": "run-s publish:*",
     "test": "run-s test:eslint test:mocha",
-    "test:mocha": "mocha \"*/*test.js\"",
-    "test:eslint": "eslint *.js",
+    "test:mocha": "mocha ./packages/**/test.js",
+    "test:eslint": "eslint ./packages/**/*.js",
     "test:watch": "nodemon -x \"npm run test:mocha -s\"",
-    "coverage": "istanbul cover node_modules/mocha/bin/_mocha */*test.js -x */*test.js",
+    "coverage": "istanbul cover node_modules/mocha/bin/_mocha ./packages/**/test.js -x ./packages/**/test.js",
     "coverage:open": "run-s coverage showcov",
     "coverage:coveralls": "run-s coverage coveralls",
     "showcov": "start coverage/lcov-report/index.html",
     "coveralls": "cat coverage/lcov.info | coveralls",
     "bundle": "webpack",
     "bundle:watch": "webpack --watch",
-    "bunlde:minify": "webpack -p"
+    "bundle:minify": "webpack -p"
   },
   "repository": {
     "type": "git",
