--- a/packages/goo-router/package.json
+++ b/packages/goo-router/package.json
@@ -1,15 +1,10 @@
 {
   "name": "goo-router",
   "version": "2.1.1",
-  "description": "",
-  "main": "goo.router.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "dependencies": {
     "goo-utils": "*",
     "path-to-regexp": "^1.7.0"
   },
-  "author": "",
+  "author": "g-harel",
   "license": "MIT"
 }
