--- a/package.json
+++ b/package.json
@@ -11,18 +11,11 @@
     "publish:goo-history": "npm publish ./packages/goo-history",
     "publish:clean": "del npm-debug.log",
     "publish": "run-s publish:*",
-    "test": "run-s test:eslint test:mocha",
-    "test:mocha": "mocha ./packages/**/test.js",
+    "test": "npm run test:jest",
     "test:eslint": "eslint ./packages/**/*.js",
-    "test:watch": "nodemon -x \"npm run test:mocha -s\"",
-    "coverage": "istanbul cover node_modules/mocha/bin/_mocha ./packages/**/test.js -x ./packages/**/test.js",
-    "coverage:open": "run-s coverage showcov",
-    "coverage:coveralls": "run-s coverage coveralls",
-    "showcov": "start coverage/lcov-report/index.html",
-    "coveralls": "cat coverage/lcov.info | coveralls",
-    "bundle": "webpack",
-    "bundle:watch": "webpack --watch",
-    "bundle:minify": "webpack -p"
+    "test:jest": "jest",
+    "coveralls": "jest --coverage && cat coverage/lcov.info | coveralls",
+    "bundle": "webpack"
   },
   "repository": {
     "type": "git",
@@ -32,16 +25,11 @@
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
-    "chai": "^3.5.0",
     "compression-webpack-plugin": "^0.4.0",
     "coveralls": "^2.13.1",
     "emn": "^0.1.2",
     "eslint": "^3.15.0",
     "eslint-config-google": "^0.7.1",
-    "istanbul": "^0.4.5",
-    "jsdom": "^9.12.0",
-    "mocha": "^3.4.2",
-    "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.2",
     "webpack": "^2.2.1"
   },
