--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,9 @@
 {
     "env": {
         "browser": true,
-        "commonjs": true,
         "es6": true
     },
+    "ecmaVersion": 8,
     "extends": "google",
     "rules": {
         "indent": [
@@ -20,6 +20,10 @@
             "always"
         ],
         "max-len": "off",
-        "no-throw-literal": "off"
+        "no-throw-literal": "off",
+        "strict": [
+            "error",
+            "global"
+        ]
     }
 }
