--- a/packages/goo-js/package.json
+++ b/packages/goo-js/package.json
@@ -3,7 +3,7 @@
   "version": "2.3.1",
   "repository": {
     "type": "git",
-    "url": "http://www.github.com/g-harel/goo"
+    "url": "http://www.github.com/g-harel/goo.git"
   },
   "dependencies": {
     "goo-dom": "*",
