--- a/packages/goo-state/package.json
+++ b/packages/goo-state/package.json
@@ -1,6 +1,10 @@
 {
   "name": "goo-state",
   "version": "2.0.2",
+  "repository": {
+    "type": "git",
+    "url": "http://www.github.com/g-harel/goo.git"
+  },
   "dependencies": {
     "goo-utils": "*"
   },
