--- a/packages/goo-utils/package.json
+++ b/packages/goo-utils/package.json
@@ -1,6 +1,10 @@
 {
   "name": "goo-utils",
   "version": "2.0.2",
+  "repository": {
+    "type": "git",
+    "url": "http://www.github.com/g-harel/goo.git"
+  },
   "author": "g-harel",
   "license": "MIT"
 }
