--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "publish:goo-history": "npm publish ./packages/goo-history",
     "publish:clean": "del npm-debug.log",
     "publish": "run-s publish:*",
-    "test": "npm run test:jest",
-    "test:eslint": "eslint ./packages/**/*.js",
+    "test": "run-s test:*",
+    "test:eslint": "eslint **/*.js",
     "test:jest": "jest",
     "coveralls": "jest --coverage && cat coverage/lcov.info | coveralls",
-    "bundle": "webpack"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -23,16 +23,19 @@
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
+    "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.22.0",
     "compression-webpack-plugin": "^0.4.0",
     "coveralls": "^2.13.1",
+    "del": "^3.0.0",
     "emn": "^0.1.2",
-    "eslint": "^3.15.0",
-    "eslint-config-google": "^0.7.1",
+    "eslint": "^4.2.0",
+    "eslint-config-google": "^0.9.1",
+    "globby": "^6.1.0",
+    "gulp": "^3.9.1",
     "jest": "^20.0.4",
     "npm-run-all": "^4.0.2",
-    "webpack": "^2.2.1"
+    "webpack": "^3.1.0"
   },
   "dependencies": {
     "path-to-regexp": "^1.7.0"
