--- a/packages/goo-state/package.json
+++ b/packages/goo-state/package.json
@@ -1,12 +1,12 @@
 {
   "name": "goo-state",
-  "version": "2.0.2",
+  "version": "2.3.2",
   "repository": {
     "type": "git",
     "url": "http://www.github.com/g-harel/goo.git"
   },
   "dependencies": {
-    "goo-utils": "*"
+    "goo-utils": "^2.3.2"
   },
   "author": "g-harel",
   "license": "MIT"
