--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "postinstall": "lerna bootstrap",
     "publish": "gulp prepublish && lerna publish && gulp clean",
     "test": "run-s test:*",
-    "test:eslint": "eslint **/*.js",
+    "test:eslint": "eslint **/*.js --ignore-path .gitignore",
     "test:jest": "jest",
     "coveralls": "jest --coverage && cat coverage/lcov.info | coveralls",
     "build": "webpack"
