--- a/packages/okwolo-utils/package.json
+++ b/packages/okwolo-utils/package.json
@@ -1,6 +1,8 @@
 {
   "name": "@okwolo/utils",
   "version": "1.0.0",
+  "main": "index.js",
+  "types": "index.d.ts",
   "keywords": [
     "okwolo",
     "vdom",
