minor tweaks to packages and readme

--- a/packages/okwolo-utils/package.json
+++ b/packages/okwolo-utils/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@okwolo/utils",
   "version": "1.0.0",
+  "description": "light javascript framework to build web applications",
   "main": "index.js",
   "types": "index.d.ts",
   "keywords": [
