--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "postinstall": "lerna bootstrap",
     "publish": "gulp prepublish && webpack && lerna publish && gulp clean",
     "test": "run-s test:*",
-    "test:eslint": "eslint **/*.js --ignore-path .gitignore",
+    "test:eslint": "eslint **/*.js",
     "test:jest": "jest",
     "codecov": "jest --coverage && codecov",
     "build": "webpack"
