--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jest": "^20.0.4",
     "jest-serializer-html-string": "^1.0.1",
     "lerna": "^2.0.0",
+    "lodash": "^4.17.4",
     "npm-run-all": "^4.0.2",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^3.4.1"
