--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
   "name": "okwolo",
-  "version": "1.0.0",
+  "version": "1.2.0",
+  "description": "light javascript framework to build web applications",
+  "main": "src/index.js",
+  "browser": "okwolo.js",
+  "minified": "okwolo.min.js",
+  "types": "src/index.d.ts",
+  "keywords": [
+    "okwolo",
+    "vdom",
+    "router",
+    "state"
+  ],
   "license": "MIT",
   "scripts": {
-    "postinstall": "lerna bootstrap",
-    "publish": "gulp prepublish && webpack && lerna publish && gulp clean",
+    "publish": "webpack && npm publish && gulp clean",
     "test": "run-s test:*",
     "test:eslint": "eslint **/*.js",
     "test:jest": "jest",
@@ -14,6 +24,9 @@
   "repository": {
     "type": "git",
     "url": "http://github.com/okwolo/okwolo.git"
+  },
+  "dependencies": {
+    "path-to-regexp": "^1.7.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -28,7 +41,6 @@
     "gulp": "^3.9.1",
     "jest": "^21.2.1",
     "jest-serializer-html-string": "^1.0.1",
-    "lerna": "^2.4.0",
     "lodash": "^4.17.4",
     "npm-run-all": "^4.1.1",
     "uglifyjs-webpack-plugin": "^0.4.6",
