--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test": "run-s test:*",
     "test:eslint": "eslint **/*.js",
     "test:jest": "jest",
+    "test:build": "run-s build",
     "codecov": "jest --coverage && codecov",
     "build": "webpack"
   },
@@ -26,13 +27,14 @@
     "url": "http://github.com/okwolo/okwolo.git"
   },
   "dependencies": {
+    "okwolo": "./",
     "path-to-regexp": "^1.7.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.22.0",
-    "codecov": "^2.3.1",
+    "codecov": "^3.0.0",
     "compression-webpack-plugin": "^1.0.1",
     "del": "^3.0.0",
     "eslint": "^4.9.0",
@@ -43,10 +45,16 @@
     "jest-serializer-html-string": "^1.0.1",
     "lodash": "^4.17.4",
     "npm-run-all": "^4.1.1",
-    "uglifyjs-webpack-plugin": "^0.4.6",
+    "uglifyjs-webpack-plugin": "^1.0.1",
     "webpack": "^3.7.1"
   },
   "jest": {
+    "testMatch": [
+      "**/test/**/*.js"
+    ],
+    "modulePathIgnorePatterns": [
+      "<rootDir>/packages/"
+    ],
     "setupTestFrameworkScriptFile": "./test.setup.js",
     "snapshotSerializers": [
       "jest-serializer-html-string"
