--- a/package.json
+++ b/package.json
@@ -26,13 +26,12 @@
     "url": "http://github.com/okwolo/okwolo.git"
   },
   "dependencies": {
-    "okwolo": "./",
     "path-to-regexp": "^2.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-env": "^1.6.1",
     "codecov": "^3.0.0",
     "compression-webpack-plugin": "^1.0.1",
     "del": "^3.0.0",
@@ -50,9 +49,6 @@
   "jest": {
     "testMatch": [
       "**/test/**/*.js"
-    ],
-    "modulePathIgnorePatterns": [
-      "<rootDir>/packages/"
     ],
     "setupTestFrameworkScriptFile": "./test.setup.js",
     "snapshotSerializers": [
