--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "license": "MIT",
     "scripts": {
         "publish": "webpack && gulp prepublish && npm publish && gulp clean",
-        "test": "run-s test:*",
+        "test": "run-s test:* gulp:*",
         "test:eslint": "eslint **/*.js",
         "test:jest": "jest",
         "test:build": "run-s build",
         "codecov": "jest --coverage && codecov",
-        "build": "webpack"
+        "build": "webpack",
+        "gulp:prepublish": "gulp prepublish",
+        "gulp:clean": "gulp clean"
     },
     "repository": {
         "type": "git",
@@ -35,17 +37,17 @@
         "codecov": "^3.0.0",
         "compression-webpack-plugin": "^1.0.1",
         "del": "^3.0.0",
-        "eslint": "^4.9.0",
+        "eslint": "^4.13.0",
         "eslint-config-google": "^0.9.1",
-        "globby": "^6.1.0",
+        "globby": "^7.1.1",
         "gulp": "^3.9.1",
         "gulp-replace": "^0.6.1",
         "jest": "^21.2.1",
         "jest-serializer-html-string": "^1.0.1",
         "lodash": "^4.17.4",
-        "npm-run-all": "^4.1.1",
-        "uglifyjs-webpack-plugin": "^1.0.1",
-        "webpack": "^3.7.1"
+        "npm-run-all": "^4.1.2",
+        "uglifyjs-webpack-plugin": "^1.1.2",
+        "webpack": "^3.10.0"
     },
     "jest": {
         "testMatch": [
