--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     ],
     "license": "MIT",
     "scripts": {
-        "publish": "webpack && gulp prepublish && npm publish && gulp clean",
+        "prepack": "webpack && gulp prepublish",
+        "postpublish": "gulp clean",
         "test": "run-s test:*",
         "test:eslint": "eslint **/*.js",
         "test:jest": "jest",
