--- a/package.json
+++ b/package.json
@@ -34,18 +34,17 @@
         "babel-loader": "^7.1.2",
         "babel-preset-env": "^1.6.1",
         "codecov": "^3.0.0",
-        "compression-webpack-plugin": "^1.1.2",
+        "compression-webpack-plugin": "^1.1.3",
         "del": "^3.0.0",
-        "eslint": "^4.13.1",
+        "eslint": "^4.15.0",
         "eslint-config-google": "^0.9.1",
         "globby": "^7.1.1",
         "gulp": "^3.9.1",
         "gulp-replace": "^0.6.1",
-        "jest": "^22.0.3",
+        "jest": "^22.0.5",
         "jest-serializer-html-string": "^1.0.1",
-        "lodash": "^4.17.4",
         "npm-run-all": "^4.1.2",
-        "uglifyjs-webpack-plugin": "^1.1.4",
+        "uglifyjs-webpack-plugin": "^1.1.6",
         "webpack": "^3.10.0"
     },
     "jest": {
@@ -57,6 +56,36 @@
         "snapshotSerializers": [
             "jest-serializer-html-string"
         ]
+    },
+    "eslintConfig": {
+        "env": {
+            "browser": true,
+            "es6": true
+        },
+        "parserOptions": {
+            "ecmaVersion": 8
+        },
+        "extends": "google",
+        "rules": {
+            "indent": [
+                2,
+                4
+            ],
+            "linebreak-style": 0,
+            "quotes": [
+                2,
+                "single"
+            ],
+            "semi": [
+                2,
+                "always"
+            ],
+            "max-len": 0,
+            "strict": [
+                2,
+                "global"
+            ]
+        }
     },
     "eslintIgnore": [
         "dist/"
