added catch-all path

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "url": "http://github.com/okwolo/okwolo.git"
     },
     "files": [
+        "README.md",
         "dist/",
         "src/",
         "lite.js",
