--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "server.js"
     ],
     "dependencies": {
+        "he": "^1.1.1",
         "path-to-regexp": "^2.1.0"
     },
     "devDependencies": {
@@ -75,12 +76,24 @@
         },
         "extends": "google",
         "rules": {
-            "indent": [2, 4],
+            "indent": [
+                2,
+                4
+            ],
             "linebreak-style": 0,
-            "quotes": [2, "single"],
-            "semi": [2, "always"],
+            "quotes": [
+                2,
+                "single"
+            ],
+            "semi": [
+                2,
+                "always"
+            ],
             "max-len": 0,
-            "strict": [2, "global"]
+            "strict": [
+                2,
+                "global"
+            ]
         }
     },
     "eslintIgnore": [
