--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "jest": "^22.0.5",
         "jest-serializer-html-string": "^1.0.1",
         "npm-run-all": "^4.1.2",
+        "prepack-webpack-plugin": "^1.1.0",
         "uglifyjs-webpack-plugin": "^1.1.6",
         "webpack": "^3.10.0"
     },
