--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "okwolo",
-    "version": "3.2.0",
+    "version": "3.3.0-rc.1",
     "description": "light javascript framework to build web applications",
     "main": "src/index.js",
     "keywords": [
