--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "okwolo",
-    "version": "3.3.0-rc.1",
+    "version": "3.3.0",
     "description": "light javascript framework to build web applications",
     "main": "src/index.js",
     "keywords": [
@@ -38,19 +38,19 @@
         "path-to-regexp": "^2.1.0"
     },
     "devDependencies": {
-        "aws-sdk": "^2.185.0",
+        "aws-sdk": "^2.186.0",
         "babel-core": "^6.26.0",
         "babel-loader": "^7.1.2",
         "babel-preset-env": "^1.6.1",
         "codecov": "^3.0.0",
         "compression-webpack-plugin": "^1.1.3",
         "del": "^3.0.0",
-        "eslint": "^4.15.0",
+        "eslint": "^4.16.0",
         "eslint-config-google": "^0.9.1",
         "globby": "^7.1.1",
         "gulp": "^3.9.1",
         "gulp-replace": "^0.6.1",
-        "jest": "^22.0.5",
+        "jest": "^22.1.4",
         "jest-serializer-html-string": "^1.0.1",
         "npm-run-all": "^4.1.2",
         "prepack-webpack-plugin": "^1.1.0",
