--- a/package.json
+++ b/package.json
@@ -38,23 +38,24 @@
         "path-to-regexp": "^2.2.1"
     },
     "devDependencies": {
-        "aws-sdk": "^2.233.1",
+        "aws-sdk": "^2.254.1",
         "babel-core": "^6.26.3",
         "babel-loader": "^7.1.4",
-        "babel-preset-env": "^1.6.1",
-        "codecov": "^3.0.1",
+        "babel-preset-env": "^1.7.0",
+        "codecov": "^3.0.2",
         "compression-webpack-plugin": "^1.1.11",
+        "copy-dir": "^0.3.0",
         "del": "^3.0.0",
         "eslint": "^4.19.1",
         "eslint-config-google": "^0.9.1",
         "globby": "^8.0.1",
         "gulp": "^3.9.1",
-        "gulp-replace": "^0.6.1",
-        "jest": "^22.4.3",
+        "gulp-replace": "^1.0.0",
+        "jest": "^23.1.0",
         "jest-serializer-html-string": "^1.0.1",
-        "npm-run-all": "^4.1.2",
+        "npm-run-all": "^4.1.3",
         "prepack": "0.2.27",
-        "prepack-webpack-plugin": "^1.1.0",
+        "prepack-webpack-plugin": "1.1.0",
         "uglifyjs-webpack-plugin": "^1.2.5",
         "webpack": "^3.11.0"
     },
